--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UpDev Games</title>
+    <title>Asteroid Games</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
@@ -24,7 +24,7 @@
     <!-- Main Section -->
     <header>
         <div class="container">
-            <h1>Up.Dev Games</h1>
+            <h1>Asteroid Games</h1>
             <p>We are constantly looking for new ideas and solutions to create interesting games for you.</p>
             <div class="social-buttons">
                 <a href="https://store.steampowered.com/" target="_blank" class="square-button">Steam</a>
@@ -40,7 +40,7 @@
         <!-- Contacts in footer -->
             <div class="footer-left">
                 <h3>Contact:</h3>
-                <p>up.dev.info@gmail.com</p>
+                <p>info.asteroidgames@gmail.com</p>
                 <!-- Social buttons -->
                 <div class="social-icons">
                     <a href="https://store.steampowered.com/" target="_blank" class="social-icon">
