--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Top Header (Navigation) -->
     <div class="top-header">
-        <div class="logo">Up.Dev</div>
+        <div class="logo">Asteroid Games</div>
         <nav>
             <ul>
                 <a href="distant-colony.html" class="square-button">Distant Colony</a>
