--- a/distant-colony.html
+++ b/distant-colony.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Distant Colony - UpDev Games</title>
+    <title>Distant Colony - Asteroid Games</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
@@ -11,7 +11,7 @@
 
 <!-- Header -->
 <div class="top-header">
-    <div class="logo"><a href="index.html">Up.Dev</a></div>
+    <div class="logo"><a href="index.html">Asteroid Games</a></div>
     <div class="social-icons">
         <a href="https://store.steampowered.com/" target="_blank" class="social-icon">
             <img src="icons/steam.png" alt="Steam">
@@ -160,7 +160,7 @@
         <!-- Contacts -->
         <div class="footer-left">
             <h3>Contact:</h3>
-            <p>up.dev.info@gmail.com</p>
+            <p>info.asteroidgames@gmail.com</p>
             <!-- Social buttons -->
             <div class="social-icons">
                 <a href="https://store.steampowered.com/" target="_blank" class="social-icon">
