--- a/distant-colony.html
+++ b/distant-colony.html
@@ -177,7 +177,7 @@
                 </a>
             </div>
             <!-- Presskits button -->
-            <a href="https://drive.google.com/drive/folders/1FujLPIIg-IUE-CFEL__INUtbFSK7Y43I?usp=drive_link" 
+            <a href="https://drive.google.com/drive/folders/1b1EE8ej9p_OJdEWDAyrb4t4ZeKOb1s1v?usp=sharing" 
                 target="_blank" class="streamer-button">Presskits</a>
         </div>
         <div class="footer-right">
