--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </a>
                 </div>
                 <!-- Presskits button -->
-                <a href="https://drive.google.com/drive/folders/1FujLPIIg-IUE-CFEL__INUtbFSK7Y43I?usp=drive_link" target="_blank" class="streamer-button">Presskits</a>
+                <a href="https://drive.google.com/drive/folders/1b1EE8ej9p_OJdEWDAyrb4t4ZeKOb1s1v?usp=sharing" target="_blank" class="streamer-button">Presskits</a>
             </div>
             <div class="footer-right">
                 <img src="BigLogo.png" alt="UpDev Games Logo">
