--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="social-buttons">
                 <a href="https://store.steampowered.com/" target="_blank" class="square-button">Steam</a>
                 <a href="https://discord.com/" target="_blank" class="square-button">Discord</a>
-                <a href="https://www.youtube.com/" target="_blank" class="square-button">YouTube</a>
+                <a href="https://www.youtube.com/channel/UCzUh3M6XfO9U_hh8Qg3vKIQ" target="_blank" class="square-button">YouTube</a>
             </div>
         </div>
     </header>
@@ -49,7 +49,7 @@
                     <a href="https://discord.com/" target="_blank" class="social-icon">
                         <img src="icons/discord.png" alt="Discord">
                     </a>
-                    <a href="https://youtube.com/" target="_blank" class="social-icon">
+                    <a href="https://www.youtube.com/channel/UCzUh3M6XfO9U_hh8Qg3vKIQ" target="_blank" class="social-icon">
                         <img src="icons/youtube.png" alt="YouTube">
                     </a>
                     <a href="https://facebook.com/" target="_blank" class="social-icon">
