--- a/distant-colony.html
+++ b/distant-colony.html
@@ -19,7 +19,7 @@
         <a href="https://discord.com/" target="_blank" class="social-icon">
             <img src="icons/discord.png" alt="Discord">
         </a>
-        <a href="https://youtube.com/" target="_blank" class="social-icon">
+        <a href="https://www.youtube.com/channel/UCzUh3M6XfO9U_hh8Qg3vKIQ" target="_blank" class="social-icon">
             <img src="icons/youtube.png" alt="YouTube">
         </a>
         <a href="https://facebook.com/" target="_blank" class="social-icon">
@@ -169,7 +169,7 @@
                 <a href="https://discord.com/" target="_blank" class="social-icon">
                     <img src="icons/discord.png" alt="Discord">
                 </a>
-                <a href="https://youtube.com/" target="_blank" class="social-icon">
+                <a href="https://www.youtube.com/channel/UCzUh3M6XfO9U_hh8Qg3vKIQ" target="_blank" class="social-icon">
                     <img src="icons/youtube.png" alt="YouTube">
                 </a>
                 <a href="https://facebook.com/" target="_blank" class="social-icon">
